Fix download buttons title alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -287,7 +287,7 @@ body .container-wrapper-prime h1 {
   text-align: center;
 }
 
-.downloads .col-md-4 {
+.downloads .col-md-3 {
   /* float: none;
   display: inline-block; */
   text-align: left;
